# EjemploProyecto

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: customers_clean.csv
data/raw/: customers.csv
notebooks/: Baseline_basico.ipynb  EDA_basico.ipynb
slides/: crear_slide_resultados.py
src/: ingesta.py  modelo_baseline.py  preprocesamiento.py
